HelloUltraviolet/Fixtures/RejectedSource/FFI/MangleOnNonFFIProcedure/Source/Main.uv
//! Rejected FFI specimen for mangle attributes on ordinary procedures.

[[mangle("foreign_name")]]
public procedure mangleOnNonFFIProcedureReference() -> i32 {
    return 0
}

